--- a/test-task/inertstoy-home/index.html
+++ b/test-task/inertstoy-home/index.html
@@ -10,7 +10,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <title>Нерудные материалы по ГОСТУ - Интерстрой</title>
+    <title>Нерудные материалы по ГОСТУ - Интерстрой</title> 
 
     <link rel="stylesheet" href="css/style.css" />
   </head>
@@ -727,7 +727,7 @@
           </div>
         </div>
       </section>
-      <section class="parners">
+      <section class="partners">
         <div class="container">
           <h2 class="partners__heading">Наши партнеры</h2>
           <div class="partners__wrapper">
@@ -805,6 +805,98 @@
                 width="103"
                 height="102"
               />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="helpful">
+        <div class="container">
+          <div class="helpful__header">
+            <h2 class="helpful__header__heading">Полезные материалы</h2>
+            <a href="#" class="helpful__header__link btn btn-border"
+              >Смотреть все статьи </a
+            >
+          </div>
+          <div class="helpful__article-list">
+            <div class="helpful__article-card">
+              <img class="helpful__article-card__img" src="image/helpful-materials/sand.png" 
+              alt="Изображение песка">
+              <div class="helpful__article-card__header">
+                <span class="helpful__article-card__type">
+                  Полезная информация
+                </span>
+                <span class="helpful__article-card__date">
+                  21/08/2024
+                </span>
+              </div>
+              <h3 class="helpful__article-card__name">
+                Купить песок и&nbsp;щебень от&nbsp;производителя
+              </h3>
+              <a class="helpful__article-card__link" href="#">
+                Читать
+                <img class="helpful__article-card__link-img" src="image/sprite/arrow-right.svg"
+                aria-hidden="true" alt="Стрелка вправо">
+              </a>
+            </div>
+            <div class="helpful__article-card">
+              <img class="helpful__article-card__img" src="image/helpful-materials/cement.png" 
+              alt="Изображение цемента">
+              <div class="helpful__article-card__header">
+                <span class="helpful__article-card__type">
+                  Обучающие материалы
+                </span>
+                <span class="helpful__article-card__date">
+                  21/08/2024
+                </span>
+              </div>
+              <h3 class="helpful__article-card__name">
+                Сфера применения цемента
+              </h3>
+              <a class="helpful__article-card__link" href="#">
+                Читать
+                <img class="helpful__article-card__link-img" src="image/sprite/arrow-right.svg"
+                aria-hidden="true" alt="Стрелка вправо">
+              </a>
+            </div>
+            <div class="helpful__article-card">
+              <img class="helpful__article-card__img" src="image/helpful-materials/house-construction.png" 
+              alt="Изображение магазина">
+              <div class="helpful__article-card__header">
+                <span class="helpful__article-card__type">
+                  Обучающие материалы
+                </span>
+                <span class="helpful__article-card__date">
+                  21/08/2024
+                </span>
+              </div>
+              <h3 class="helpful__article-card__name">
+                Если вы&nbsp;решили построить дом
+              </h3>
+              <a class="helpful__article-card__link" href="#">
+                Читать
+                <img class="helpful__article-card__link-img" src="image/sprite/arrow-right.svg"
+                aria-hidden="true" alt="Стрелка вправо">
+              </a>
+            </div>
+            <div class="helpful__article-card">
+              <img class="helpful__article-card__img" src="image/helpful-materials/pricing.png" 
+              alt="Изображение стройматериалов">
+              <div class="helpful__article-card__header">
+                <span class="helpful__article-card__type">
+                  Полезная информация
+                </span>
+                <span class="helpful__article-card__date">
+                  21/08/2024
+                </span>
+              </div>
+              <h3 class="helpful__article-card__name">
+                Формирование цен на&nbsp;стройматериалы
+              </h3>
+              <a class="helpful__article-card__link" href="#">
+                Читать
+                <img class="helpful__article-card__link-img" src="image/sprite/arrow-right.svg"
+                aria-hidden="true" alt="Стрелка вправо">
+              </a>
             </div>
           </div>
         </div>
