--- a/test-task/inertstoy-home/index.html
+++ b/test-task/inertstoy-home/index.html
@@ -901,6 +901,111 @@
           </div>
         </div>
       </section>
+      <section class="faq">
+        <div class="container">
+          <h2 class="faq__heading">Ответы на&nbsp;частые вопросы</h2>
+          <ul class="faq__list">
+            <li class="faq__list-item faq__list-item--active">
+              <div class="faq__list-item__content">
+                <h3 class="faq__list-item__content__question">
+                  У&nbsp;вас можно заказать и&nbsp;в&nbsp;опт, и&nbsp;в&nbsp;розницу? Какой минимальный заказ?
+                </h3>
+                <span class="faq__list-item__content__answer">
+                  Да, мы&nbsp;работаем и&nbsp;в&nbsp;опт, и&nbsp;в&nbsp;розницу. Минимальный заказ от&nbsp;1&nbsp;мешка.
+                </span>
+              </div>
+              <button class="faq__list-item__btn">
+                <img src="image/sprite/icon-plus.svg" alt="Показать ответ" class="faq__list-item__img-open">
+                <img src="image/sprite/icon-minus.svg" alt="Скрыть ответ" class="faq__list-item__img-close">
+              </button>
+            </li>
+            <li class="faq__list-item">
+              <div class="faq__list-item__content">
+                <h3 class="faq__list-item__content__question">
+                  Вы&nbsp;работаете и&nbsp;с&nbsp;физическими, и&nbsp;с&nbsp;юридическими лицами?
+                </h3>
+                <span class="faq__list-item__content__answer"></span>
+              </div>
+              <button class="faq__list-item__btn">
+                <img src="image/sprite/icon-plus.svg" alt="Показать ответ" class="faq__list-item__img-open">
+                <img src="image/sprite/icon-minus.svg" alt="Скрыть ответ" class="faq__list-item__img-close">
+              </button>
+            </li>
+            <li class="faq__list-item">
+              <div class="faq__list-item__content">
+                <h3 class="faq__list-item__content__question">
+                  За&nbsp;сколько времени нужно сделать заказ, чтобы его привезли вовремя?
+                </h3>
+                <span class="faq__list-item__content__answer"></span>
+              </div>
+              <button class="faq__list-item__btn">
+                <img src="image/sprite/icon-plus.svg" alt="Показать ответ" class="faq__list-item__img-open">
+                <img src="image/sprite/icon-minus.svg" alt="Скрыть ответ" class="faq__list-item__img-close">
+              </button>
+            </li>
+            <li class="faq__list-item">
+              <div class="faq__list-item__content">
+                <h3 class="faq__list-item__content__question">
+                  Какие способы оплаты у&nbsp;вас есть? Работаете&nbsp;ли вы&nbsp;без предоплаты?
+                </h3>
+                <span class="faq__list-item__content__answer"></span>
+              </div>
+              <button class="faq__list-item__btn">
+                <img src="image/sprite/icon-plus.svg" alt="Показать ответ" class="faq__list-item__img-open">
+                <img src="image/sprite/icon-minus.svg" alt="Скрыть ответ" class="faq__list-item__img-close">
+              </button>
+            </li>
+            <li class="faq__list-item">
+              <div class="faq__list-item__content">
+                <h3 class="faq__list-item__content__question">
+                  Какие документы вы&nbsp;предоставляете?
+                </h3>
+                <span class="faq__list-item__content__answer"></span>
+              </div>
+              <button class="faq__list-item__btn">
+                <img src="image/sprite/icon-plus.svg" alt="Показать ответ" class="faq__list-item__img-open">
+                <img src="image/sprite/icon-minus.svg" alt="Скрыть ответ" class="faq__list-item__img-close">
+              </button>
+            </li>
+            <li class="faq__list-item">
+              <div class="faq__list-item__content">
+                <h3 class="faq__list-item__content__question">
+                  Есть&nbsp;ли скидки для постоянных заказчиков?
+                </h3>
+                <span class="faq__list-item__content__answer"></span>
+              </div>
+              <button class="faq__list-item__btn">
+                <img src="image/sprite/icon-plus.svg" alt="Показать ответ" class="faq__list-item__img-open">
+                <img src="image/sprite/icon-minus.svg" alt="Скрыть ответ" class="faq__list-item__img-close">
+              </button>
+            </li>
+            <li class="faq__list-item">
+              <div class="faq__list-item__content">
+                <h3 class="faq__list-item__content__question">
+                  Вы&nbsp;участвуете в&nbsp;тендерах?
+                </h3>
+                <span class="faq__list-item__content__answer"></span>
+              </div>
+              <button class="faq__list-item__btn">
+                <img src="image/sprite/icon-plus.svg" alt="Показать ответ" class="faq__list-item__img-open">
+                <img src="image/sprite/icon-minus.svg" alt="Скрыть ответ" class="faq__list-item__img-close">
+              </button>
+            </li>
+            <li class="faq__list-item">
+              <div class="faq__list-item__content">
+                <h3 class="faq__list-item__content__question">
+                  Ваши стройматериалы производятся в&nbsp;Крыму? Есть&nbsp;ли сертификаты, ГОСТы?
+                </h3>
+                <span class="faq__list-item__content__answer"></span>
+              </div>
+              <button class="faq__list-item__btn">
+                <img src="image/sprite/icon-plus.svg" alt="Показать ответ" class="faq__list-item__img-open">
+                <img src="image/sprite/icon-minus.svg" alt="Скрыть ответ" class="faq__list-item__img-close">
+              </button>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
