--- a/test-task/inertstoy-home/index.html
+++ b/test-task/inertstoy-home/index.html
@@ -950,6 +950,107 @@
           </ul>
         </div>
       </section>
+      <section class="contacts">
+        <div class="container">
+          <h2 class="contacts__heading">Контакты</h2>
+          <div class="contacts__content">
+            <div class="contacts__border border-top">
+              <div class="border-top__overlay"></div>
+            </div>
+            <div class="contacts__top">
+              <ul class="contacts__list">
+                <li class="contacts__list-item">
+                  <img class="contacts__list-item__icon" src="image/sprite/icon-pin.svg"
+                  alt="Иконка маркера" aria-hidden="true">
+                <div class="contacts__list-item__content">
+                  <span class="contacts__list-item__name">Адрес офиса и&nbsp;базы:</span>
+                  <span class="contacts__list-item__info">г. Симферополь,<br> ул. Крылова, 164</span>
+                </div>
+                </li>
+                <li class="contacts__list-item">
+                  <img class="contacts__list-item__icon" src="image/sprite/icon-clock.svg"
+                  alt="Иконка часов" aria-hidden="true">
+                <div class="contacts__list-item__content">
+                  <span class="contacts__list-item__name">Режим работы офиса и&nbsp;базы:</span>
+                  <span class="contacts__list-item__info">по&nbsp;будням с&nbsp;9&nbsp;до&nbsp;18</span>
+                </div>
+                </li>
+                <li class="contacts__list-item">
+                  <img class="contacts__list-item__icon" src="image/sprite/icon-mail.svg"
+                  alt="Иконка почты" aria-hidden="true">
+                <div class="contacts__list-item__content">
+                  <span class="contacts__list-item__name">Почта</span>
+                  <span class="contacts__list-item__info">
+                    <a href="mailto:strousimf@mail.ru" class="contacts__list-item__link">strousimf@mail.ru</a>
+                  </span>
+                </div>
+                </li>
+                <li class="contacts__list-item">
+                  <img class="contacts__list-item__icon" src="image/sprite/icon-phone-1.svg"
+                  alt="Иконка телефона" aria-hidden="true">
+                <div class="contacts__list-item__content">
+                  <span class="contacts__list-item__name">Телефоны</span>
+                  <span class="contacts__list-item__info">
+                    <a href="tel:89780950004" class="contacts__list-item__link">+7&nbsp;978 095-00-04</a>
+                    <a href="tel:89780950003" class="contacts__list-item__link">+7&nbsp;978 095-00-03</a>
+                  </span>
+                </div>
+                </li>
+              </ul>
+              <div class="contacts__social-media">
+                <a href="#" class="contacts__social-media__link">
+                  <img class="contacts__social-media__icon" src="image/sprite/icon-whatsapp.svg" 
+                  alt="WhatsApp">
+                </a>
+                <a href="#" class="contacts__social-media__link">
+                  <img class="contacts__social-media__icon" src="image/sprite/icon-vk.svg" 
+                  alt="ВКонтакте">
+                </a>
+              </div>
+          </div>
+            <div class="contacts__call-back">
+              <h2 class="contacts__call-back__heading">Связаться с&nbsp;нами</h2>
+              <span class="contacts__call-back__caption">
+                Наш менеджер перезвонит вам в&nbsp;ближайшее время
+              </span>
+              <form action="POST" class="form">
+                <div class="contacts__call-back__wrapper">
+                  <input class="contacts__call-back__field" type="text" placeholder="Ваше имя*"
+                  name="name" id="user-name" required>
+                  <label class="custom-plaseholder">
+                    <input class="contacts__call-back__field" type="tel"
+                    name="phone" id="user-phone" required>
+                    <div class="custom-plaseholder__text">
+                      <span class="custom-plaseholder__text-accent">
+                        +7 (978) 
+                      </span>
+                      00 00 000
+                      <span class="custom-plaseholder__text-accent">*</span>
+                    </div>
+                  </label>
+                  <div class="contacts__call-back__bottom">
+                    <div class="custom-checkbox">
+                      <input class="custom-checkbox__field visually-hidden" type="checkbox"
+                      name="agreement" id="agreement" required>
+                      <label for="agreement" class="custom-checkbox__label">
+                        <span class="custom-checkbox__name">
+                          Я&nbsp;согласен с&nbsp;<a href="#" 
+                          class="custom-checkbox__name-link">политикой обработки персональных данных</a>
+                        </span>
+                        <svg class="custom-checkbox__check">
+                          <use xlink:href="image/sprite.svg#icon-check"></use>
+                        </svg>
+                      </label>
+                    </div>
+                    <button class="contacts__call-back__btn btn btn-red" type="submit">оставить заявку</button>
+                  </div>
+                </div>
+              </form>
+            </div>
+            <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/146/simferopol/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Симферополь</a><a href="https://yandex.ru/maps/146/simferopol/house/ulitsa_krylova_164/Z00YdwZmTUUAQFpufXVzeXpibA==/?ll=34.117165%2C44.928472&utm_medium=mapframe&utm_source=maps&z=15.4" style="color:#eee;font-size:12px;position:absolute;top:14px;">Улица Крылова, 164 — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?ll=34.117165%2C44.928472&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgoxNzI0NzcwNjMwEmPQoNC-0YHRgdC40Y8sINCg0LXRgdC_0YPQsdC70LjQutCwINCa0YDRi9C8LCDQodC40LzRhNC10YDQvtC_0L7Qu9GMLCDRg9C70LjRhtCwINCa0YDRi9C70L7QstCwLCAxNjQiCg0ydwhCFei2M0I%2C&z=15.4" width="727" height="467" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer">
       <div class="container">
