--- a/test-task/inertstoy-home/index.html
+++ b/test-task/inertstoy-home/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
+    >
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
     <title>Нерудные материалы по ГОСТУ - Интерстрой</title> 
 
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header class="header">
@@ -220,7 +220,7 @@
                   class="catalog__list-item__img"
                   src="image/catalog/crushed-stone.png"
                   alt="Щебень"
-                />
+                >
                 <span class="catalog__list-item__name">Щебень</span>
               </a>
             </li>
@@ -230,7 +230,7 @@
                   class="catalog__list-item__img"
                   src="image/catalog/sift.png"
                   alt="Отсев"
-                />
+                >
                 <span class="catalog__list-item__name">Отсев</span>
               </a>
             </li>
@@ -240,7 +240,7 @@
                   class="catalog__list-item__img"
                   src="image/catalog/bute-stone.png"
                   alt="Бут"
-                />
+                >
                 <span class="catalog__list-item__name">Бут</span>
               </a>
             </li>
@@ -250,7 +250,7 @@
                   class="catalog__list-item__img"
                   src="image/catalog/sand.png"
                   alt="Песок"
-                />
+                >
                 <span class="catalog__list-item__name">Песок</span>
               </a>
             </li>
@@ -260,7 +260,7 @@
                   class="catalog__list-item__img"
                   src="image/catalog/cerazmit.png"
                   alt="Керамзит"
-                />
+                >
                 <span class="catalog__list-item__name">Керамзит</span>
               </a>
             </li>
@@ -270,7 +270,7 @@
                   class="catalog__list-item__img"
                   src="image/catalog/fruit-soil.png"
                   alt="Плод. грунт"
-                />
+                >
                 <span class="catalog__list-item__name">Плод. грунт</span>
               </a>
             </li>
@@ -280,7 +280,7 @@
                   class="catalog__list-item__img"
                   src="image/catalog/aerated-concrete.png"
                   alt="Газобетон"
-                />
+                >
                 <span class="catalog__list-item__name">Газобетон</span>
               </a>
             </li>
@@ -290,7 +290,7 @@
                   class="catalog__list-item__img"
                   src="image/catalog/shell-stone.png"
                   alt="Ракушка"
-                />
+                >
                 <span class="catalog__list-item__name">Ракушка</span>
               </a>
             </li>
@@ -300,7 +300,7 @@
                   class="catalog__list-item__img"
                   src="image/catalog/brick.png"
                   alt="Кирпич"
-                />
+                >
                 <span class="catalog__list-item__name">Кирпич</span>
               </a>
             </li>
@@ -310,7 +310,7 @@
                   class="catalog__list-item__img"
                   src="image/catalog/stone-chips.png"
                   alt="Крошка"
-                />
+                >
                 <span class="catalog__list-item__name">Крошка</span>
               </a>
             </li>
@@ -320,7 +320,7 @@
                   class="catalog__list-item__img"
                   src="image/catalog/sift.png"
                   alt="Цемент"
-                />
+                >
                 <span class="catalog__list-item__name">Цемент</span>
               </a>
             </li>
@@ -330,7 +330,7 @@
                   class="catalog__list-item__img"
                   src="image/catalog/tarsa.png"
                   alt="Тырса"
-                />
+                >
                 <span class="catalog__list-item__name">Тырса</span>
               </a>
             </li>
@@ -340,7 +340,7 @@
                   class="catalog__list-item__img"
                   src="image/catalog/blend.png"
                   alt="Смеси"
-                />
+                >
                 <span class="catalog__list-item__name">Смеси</span>
               </a>
             </li>
@@ -350,7 +350,7 @@
                   class="catalog__list-item__img"
                   src="image/catalog/concrete-mesh.png"
                   alt="Сетка (бетон)"
-                />
+                >
                 <span class="catalog__list-item__name">Сетка (бетон)</span>
               </a>
             </li>
@@ -360,7 +360,7 @@
                   class="catalog__list-item__img"
                   src="image/catalog/concentrate.png"
                   alt="Концентрат"
-                />
+                >
                 <span class="catalog__list-item__name">Концентрат</span>
               </a>
             </li>
@@ -379,7 +379,7 @@
             <div class="services__card">
               <h3 class="services__card__headinng">Доставка</h3>
               <span class="services__card__caption"
-                >Рассчитывается индивидуально.<br />
+                >Рассчитывается индивидуально.<br>
                 Цена ниже при оптовых заказах</span
               >
               <a href="#" class="services__card__link btn btn-red"
@@ -389,12 +389,12 @@
                 class="services__card__img services__card__img--1"
                 src="image/delivery.png"
                 alt="Изображение грузовика"
-              />
+              >
             </div>
             <div class="services__card">
               <h3 class="services__card__headinng">Вывоз грунта</h3>
               <span class="services__card__caption"
-                >Рассчитывается индивидуально.<br />Цена ниже при оптовых
+                >Рассчитывается индивидуально.<br>Цена ниже при оптовых
                 заказах</span
               >
               <a href="#" class="services__card__link btn btn-red"
@@ -404,7 +404,7 @@
                 class="services__card__img services__card__img--2"
                 src="image/soil-removal.png"
                 alt="Изображение эскаватора"
-              />
+              >
             </div>
             <div class="services__card services__card--flat">
               <h3 class="services__card__headinng">Аренда спецтехники</h3>
@@ -418,7 +418,7 @@
                 class="services__card__img services__card__img--3"
                 src="image/rental.png"
                 alt="Изображение эскаватора"
-              />
+              >
             </div>
           </div>
         </div>
@@ -524,7 +524,7 @@
                 alt="Щебень"
                 width="285"
                 height="255"
-              />
+              >
               <div class="top__catalog__product-card__content">
                 <span class="top__catalog__product-card__price"
                   >от&nbsp;1050&nbsp;руб/т</span
@@ -555,7 +555,7 @@
                 class="top__catalog__product-card__img"
                 src="image/top--crushed-stone.png"
                 alt="Щебень"
-              />
+              >
               <div class="top__catalog__product-card__content">
                 <span class="top__catalog__product-card__price"
                   >от&nbsp;1050&nbsp;руб/т</span
@@ -586,7 +586,7 @@
                 class="top__catalog__product-card__img"
                 src="image/top--crushed-stone.png"
                 alt="Щебень"
-              />
+              >
               <div class="top__catalog__product-card__content">
                 <span class="top__catalog__product-card__price"
                   >от&nbsp;1050&nbsp;руб/т</span
@@ -617,7 +617,7 @@
                 class="top__catalog__product-card__img"
                 src="image/top--crushed-stone.png"
                 alt="Щебень"
-              />
+              >
               <div class="top__catalog__product-card__content">
                 <span class="top__catalog__product-card__price"
                   >от&nbsp;1050&nbsp;руб/т</span
@@ -703,52 +703,52 @@
                 class="partners__grid-img partners__grid-img--intourist"
                 src="image/partners/intourist.png"
                 alt="Yalta Intourist"
-              />
+              >
               <img
                 class="partners__grid-img partners__grid-img--crimsoda"
                 src="image/partners/crimsoda.png"
                 alt="Crimsoda"
-              />
+              >
               <img
                 class="partners__grid-img partners__grid-img--perekop"
                 src="image/partners/perekop.png"
                 alt="Perekop bromine"
-              />
+              >
               <img
                 class="partners__grid-img partners__grid-img--ktke"
                 src="image/partners/ktke.png"
                 alt="КРЫМТЕПЛОКОММУНЭНЕРГО"
-              />
+              >
               <img
                 class="partners__grid-img partners__grid-img--trolleybus"
                 src="image/partners/trolleybus.png"
                 alt="КрымТроллейбус"
-              />
+              >
               <img
                 class="partners__grid-img partners__grid-img--mbu"
                 src="image/partners/mbu.png"
                 alt="МБУ Город"
-              />
+              >
               <img
                 class="partners__grid-img partners__grid-img--ecograd"
                 src="image/partners/ecograd.png"
                 alt="Экоград"
-              />
+              >
               <img
                 class="partners__grid-img partners__grid-img--greenwood"
                 src="image/partners/greenwood.png"
                 alt="Гринвуд"
-              />
+              >
               <img
                 class="partners__grid-img partners__grid-img--krymeatour"
                 src="image/partners/krymeatour.png"
                 alt="Крымтур"
-              />
+              >
               <img
                 class="partners__grid-img partners__grid-img--titan"
                 src="image/partners/titan.png"
                 alt="Титан"
-              />
+              >
             </div>
           </div>
         </div>
