--- a/test-task/uch-yantik/index.html
+++ b/test-task/uch-yantik/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <title>Уч-Янтык</title>
 </head>
 <body>
@@ -68,6 +71,41 @@
                         <img class="banner__img" src="img/banner-img.png" alt="Фото выпечки"
                         srcset="img/banner-img@2x.png 2x">
                     </picture>
+                </div>
+            </div>
+        </section>
+        <section class="about">
+            <div class="container">
+                <div class="about__wrapper">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="img/about-mobile.jpg 1x, img/about-mobile@2x.jpg 2x">
+                        <img class="about__bg" src="img/about.jpg" srcset="img/about@2x.jpg 2x" alt="Фото пирогов">
+                    </picture>
+                    <div class="about__card">
+                        <div class="about__part">
+                            <h2 class="about__heading">о&nbsp;караимах</h2>
+                            <p class="about__text">
+                                Внезапно, сторонники тоталитаризма в науке, превозмогая сложившуюся непростую экономическую ситуацию, заблокированы в рамках своих собственных рациональных ограничений.
+                            </p>
+                            <p class="about__text">
+                                В своём стремлении повысить качество жизни, они забывают, что новая модель организационной деятельности выявляет срочную потребность переосмысления внешнеэкономических политик
+                            </p>
+                        </div>
+                        <div class="about__logo">
+                            <svg class="about__logo-icon">
+                                <use xlink:href="img/sprite.svg#icon-logo-small"></use>
+                            </svg>
+                        </div>
+                        <div class="about__part about__part--right">
+                            <h2 class="about__heading">о&nbsp;пекарне</h2>
+                            <p class="about__text">
+                                Внезапно, сторонники тоталитаризма в науке, превозмогая сложившуюся непростую экономическую ситуацию, заблокированы в рамках своих собственных рациональных ограничений.
+                            </p>
+                            <p class="about__text">
+                                В своём стремлении повысить качество жизни, они забывают, что новая модель организационной деятельности выявляет срочную потребность переосмысления внешнеэкономических политик
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
