блок "о нас говорят"

--- a/test-task/uch-yantik/index.html
+++ b/test-task/uch-yantik/index.html
@@ -109,6 +109,71 @@
                 </div>
             </div>
         </section>
+        <section class="media">
+            <div class="container">
+                <div class="media__wrapper">
+                    <svg class="media__ornament">
+                        <use xlink:href="img/sprite.svg#ornament"></use>
+                    </svg>
+                    <div class="media__video">
+                        <h2 class="media__heading">о&nbsp;нас снимают</h2>
+                        <a href="#" class="media__video-content">
+                            <picture>
+                                <source media="(max-width: 767px)" srcset="img/video-cat-mobile.jpg 1x, img/video-cat-mobile@2x.jpg 2x">
+                                <img class="media__video-img" src="img/video-cat.jpg" alt="Кард из видео" srcset="img/video-cat@2x.jpg 2x">
+                            </picture>
+                            <img class="media__video-icon" src="img/sprite/icon-play.svg" alt="Иконка play">
+                            <p class="media__video-name">кот мостик о&nbsp;караимских пирожках</p>
+                            <p class="media__video-date">репортаж от&nbsp;27.11.2022</p>
+                        </a>
+                    </div>
+                    <div class="media__articles-wrapper">
+                        <h2 class="media__articles-heading">о&nbsp;нас говорят</h2>
+                        <div class="media__articles">
+                            <div class="media__articles-card">
+                                <div class="media__articles-card-img-wrapper">
+                                    <img class="media__articles-card-img media__articles-card-img--travelcrimea" src="img/travelcrimea.png" alt="Туристический портал Крыма">
+                                </div>
+                                <p class="media__articles-card-text">
+                                    Внезапно, сторонники тоталитаризма в науке, превозмогая сложившуюся непростую экономическую ситуацию, заблокированы в рамках своих собственных рациональных ограничений.
+                                    В своём стремлении повысить качество жизни...
+                                </p>
+                                <a href="#" class="media__articles-card-btn">
+                                    Читать полностью
+                                    <img class="media__articles-card-btn-icon" src="img/sprite/icon-arrow-down.svg" alt="Иконка стрелки">
+                                </a>
+                            </div>
+                            <div class="media__articles-card">
+                                <div class="media__articles-card-img-wrapper">
+                                    <img class="media__articles-card-img media__articles-card-img--rgru" src="img/rgru.png" alt="RG.ru">
+                                </div>
+                                <p class="media__articles-card-text">
+                                    Внезапно, сторонники тоталитаризма в науке, превозмогая сложившуюся непростую экономическую ситуацию, заблокированы в рамках своих собственных рациональных ограничений.
+                                    В своём стремлении повысить качество жизни...
+                                </p>
+                                <a href="#" class="media__articles-card-btn">
+                                    Читать полностью
+                                    <img class="media__articles-card-btn-icon" src="img/sprite/icon-arrow-down.svg" alt="Иконка стрелки">
+                                </a>
+                            </div>
+                            <div class="media__articles-card">
+                                <div class="media__articles-card-img-wrapper">
+                                    <img class="media__articles-card-img media__articles-card-img--zen" src="img/zen.png" alt="Яндекс Дзен">
+                                </div>
+                                <p class="media__articles-card-text">
+                                    Внезапно, сторонники тоталитаризма в науке, превозмогая сложившуюся непростую экономическую ситуацию, заблокированы в рамках своих собственных рациональных ограничений.
+                                    В своём стремлении повысить качество жизни...
+                                </p>
+                                <a href="#" class="media__articles-card-btn">
+                                    Читать полностью
+                                    <img class="media__articles-card-btn-icon" src="img/sprite/icon-arrow-down.svg" alt="Иконка стрелки">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer__wrapper">
         <div class="container">
